--- a/EwyBot/EwyBot.csproj
+++ b/EwyBot/EwyBot.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="Discord.Net" Version="3.7.2" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-preview.6.22324.4" />
     </ItemGroup>
 
 </Project>
